# engram

./: .otto.yml  Cargo.toml  README.md  engram.yml
docs/: engram-test-spec.md  implementation-plan.md
examples/: .gitignore  01-basic-crud.sh  02-priorities.sh  03-labels.sh  04-dependencies.sh  05-ready-work.sh  06-workflow-status.sh  07-parent-child.sh  08-descriptions.sh  09-daemon-mode.sh  10-full-project.sh  11-querying.sh  12-git-integration.sh  13-complex-dependencies.sh  14-quick-reference.sh  15-blocked-workflow.sh  README.md
src/: batch.rs  builder.rs  cli.rs  client.rs  compact.rs  daemon.rs  eventquery.rs  id.rs  lib.rs  main.rs  protocol.rs  query.rs  storage.rs  store.rs  types.rs  vacuum.rs
tests/: edge_case_tests.rs  error_tests.rs  graph_tests.rs
tests/common/: mod.rs
