[package]
name = "engram"
version = "0.1.2"
edition = "2024"
authors = ["Scott Aidler"]
build = "build.rs"
description = "Task graph persistence with SQLite backend"

[[bin]]
name = "eg"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
libc = "0.2.180"
log = "0.4.29"
rand = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
# Dependencies will be added via cargo add

[build-dependencies]

[dev-dependencies]
tempfile = "3.24.0"
# For build.rs if needed
